# Mathics3-Module-trepan

./: .gitignore  CHANGES.rst  ChangeLog-spell-corrected.diff  Makefile  README.rst  pyproject.toml  setup.py
admin-tools/: make-dist.sh
pymathics/trepan/: __init__.py  __main__.py  debug_evaluation.py  stacktrace.py  tracing.py  version.py
pymathics/trepan/lib/: core.py  format.py  location.py  repl.py  stack.py
pymathics/trepan/processor/: cmdproc.py  location.py
pymathics/trepan/processor/command/: quit.py
pymathics/trepan/processor/command/info_subcmd/: program.py  return.py
pymathics/trepan/processor/command/set_subcmd/: return.py
